<resources>
    <string name="app_name">Online Coffee Shop app</string>
    <string name="get_started">Get Started</string>
    <string name="intro_message">Find the best coffe\nfor you</string>
    <string name="hint_input">Search for anything..</string>
    <string name="Good_morning">Good Morning</string>
    <string name="message_grapdaya">Grap ypur first coffie in this morning</string>
    <string name="Purpaler">Purpaler</string>
    <string name="see_more">See more</string>
    <string name="submit">Submit</string>
</resources>