<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/darkBrown"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.IntroActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/intro_pic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/brown_gradient"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/get_started"
                    android:textColor="@color/orange"
                    android:textStyle="bold"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="44dp"
                    android:textSize="18dp"
                    />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intro_message"
                    android:textSize="31sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="20dp"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/start_btn"
                    android:layout_width="130dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="24dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/orange_btn"
                    android:text="@string/submit" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>